# AndroidSandbox

./: build.gradle  dependencies.gradle  settings.gradle
app/: build.gradle
app/ext/: CMakeLists.txt  FsdkRoutine.h  luna_sdk  wrapper_wrap.cxx
app/src/androidTest/java/ru/vasiliev/sandbox/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/data/: FaceDet_v1_first_arm.plan  FaceDet_v1_first_cpu.plan  FaceDet_v1_second_arm.plan  FaceDet_v1_second_cpu.plan  FaceDet_v1_third_arm.plan  FaceDet_v1_third_cpu.plan  LNet_fast_arm.plan  LNet_fast_cpu.plan  angle_estimation_flwr_arm.plan  angle_estimation_flwr_cpu.plan  angle_estimation_flwr_gpu_mobile.plan  cnndescriptor_52.conf  eye_status_estimation_flwr_arm.plan  eye_status_estimation_flwr_cpu.plan  eye_status_estimation_flwr_gpu_mobile.plan  eyes_estimation_flwr8_arm.plan  eyes_estimation_flwr8_cpu.plan  eyes_estimation_flwr8_gpu_mobile.plan  faceengine.conf  faceflow_model_1_arm.plan  faceflow_model_1_cpu.plan  faceflow_model_1_gpu_mobile.plan  faceflow_model_2_arm.plan  faceflow_model_2_cpu.plan  faceflow_model_2_gpu_mobile.plan  glasses_estimation_flwr_arm.plan  glasses_estimation_flwr_cpu.plan  license.conf  livenessengine.conf  model_image_quality6_arm.plan  model_image_quality6_cpu.plan  model_image_quality6_gpu_mobile.plan  smile_model_arm.plan  smile_model_cpu.plan  smile_model_gpu_mobile.plan
app/src/main/java/ru/vasiliev/sandbox/: App.java  ComponentManager.java  LocationActivity.java  MainActivity.java
app/src/main/res/drawable/: bg_mask.xml
app/src/main/res/layout/: activity_location.xml  activity_oauth.xml  activity_view.xml  activity_visionlabs.xml  content_main.xml  content_oauth.xml  content_visionlabs.xml  fragment_face_not_found.xml  fragment_face_not_recognized.xml  fragment_photo.xml  fragment_save_photo.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
app/src/test/java/ru/vasiliev/sandbox/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
visionlab/: build.gradle  proguard-rules.pro
visionlab/src/main/: AndroidManifest.xml
visionlab/src/main/java/ru/visionlab/: Resources.java
visionlab/src/main/java/ru/visionlab/faceengine/: FaceEngineJNI.java  ImageFormat.java  PhotoMaker.java  PhotoProcessor.java  Point.java  Rect.java  Version.java
visionlab/src/main/jni/: wrapper_wrap.cxx
visionlab/src/main/jni/CMake/: Embed.cmake  FindBlosc.cmake  FindCuDNN.cmake  FindGD.cmake  FindHASP.cmake  FindIPP.cmake  FindLivenessEngineSDK.cmake  FindMKL.cmake  FindNNPACK.cmake  FindPthreadPool.cmake  FindVLDNN.cmake  InstallSymlink.cmake  version.h
visionlab/src/main/jni/include/vlf/: Atomic.h  CoreDef.h  vlfmath.h
visionlab/src/main/jni/include/vlf/Types/: Detection.h  Rect.h  RefBase.h  Result.h  ResultValue.h  SubImage.h  WeakRef.h
visionlabs/: build.gradle
visionlabs/ext/CMake/: FindCppRest.cmake  FindFlower.cmake  FindFreeImage.cmake  FindTBB.cmake  FindVLF.cmake  version.cpp.in
visionlabs/src/main/: AndroidManifest.xml
visionlabs/src/main/java/ru/visionlab/: Utils.java
visionlabs/src/main/jni/: CMakeLists.txt  FsdkRoutine.h  Timer.h  wrapper_wrap.cxx
visionlabs/src/main/jni/CMake/: Filter.cmake  FindAppFoundation.cmake  FindCNN.cmake  FindDLIB.cmake  FindFFMPEG.cmake  FindFaceEngineSDK.cmake  FindPhotoMaker.cmake  FindPugiXML.cmake  FindVLC.cmake  GetSymLinkChain.cmake  Version.cmake
visionlabs/src/main/jni/include/vlf/: AlignedMalloc.h  Log.h  Types.h
visionlabs/src/main/jni/include/vlf/Types/: Format.h  Image.h  Ref.h  Sizer.h  Vector2.h
(+100 files in other folders)
